mail page added

--- a/combo-pack.html
+++ b/combo-pack.html
@@ -17,7 +17,7 @@
     <div class="resume">
         <div class="resumes-container">
             <div class="resume-container">
-                <div class="resume-card">
+                <div class="resume-card" onclick="window.location.href='./mail.html'">
                     <div class="heading">
                         <h4>Job Search Value Pack</h4>
                     </div>
@@ -95,7 +95,7 @@
 
                 </div>
 
-                <div class="resume-card">
+                <div class="resume-card" onclick="window.location.href='./mail.html'">
                     <div class="heading">
                         <h4>Job Search Value Pack</h4>
                     </div>
@@ -173,7 +173,7 @@
 
                 </div>
 
-                <div class="resume-card">
+                <div class="resume-card" onclick="window.location.href='./mail.html'">
                     <div class="heading">
                         <h4>Job Search Value Pack</h4>
                     </div>
