--- a/mail.html
+++ b/mail.html
@@ -1,39 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile and Mail</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
+
     <link rel="stylesheet" href="mail.css">
 </head>
+
 <body>
     <div class="banner">
         <p>2.70L Got new jobs using this service*</p>
     </div>
     <div class="nav">
-        <div class="img-div">
-            <img src="./assets/jobs4u.22bb9e85.png" alt="" class="img-fluid">
-        </div>
-        <div class="title">
-            <p>Not Getting Relevant jobs?</p>
-            <h2>
-                Stand out as an Early Applicant with instant access to hand-picked jobs for you by Naukri Experts
-            </h2>
+        <div class="upper">
+            <div class="title">
+                <p>Not Getting Relevant jobs?</p>
+                <h2>
+                    Stand out as an Early Applicant with instant access to hand-picked jobs for you by Naukri Experts
+                </h2>
+            </div>
+            <div class="img-div">
+                <img src="./assets/pAImg.90b5b769.png" alt="" class="img-fluid">
+            </div>
         </div>
         <div class="card-container">
             <h3>Key Features</h3>
-            <div class="card">
-                
+            <div class="cards">
+                <div class="cards-container px-2 py-2">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4 imgdiv">
+                                <img src="./assets/keyfeature1.59b6e0a4.png" class="img-fluid" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h4 class="card-title">Get hand-picked jobs by Naukri domain expert</h4>
+                                    <p class="card-text">Detailed conversation with Naukri expert to set up your
+                                        personalized job search criteria</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4 imgdiv">
+                                <img src="./assets/keyfeature3.8724ec41.png" class="img-fluid " alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Get early applicant advantage with priority access to jobs
+                                    </h5>
+                                    <p class="card-text">Receive jobs within 24 hours of them being posted on Naukri.
+                                        First 20% applicants are 4 times more likely to get shortlisted
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4 imgdiv">
+                                <img src="./assets/keyfeature2.377479d1.png" class="img-fluid " alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Get exclusive access to confidential jobs</h5>
+                                    <div>
+                                        <ul>
+                                            <li>
+                                                Max 3 job recommendations per day on SMS
+                                            </li>
+                                            <li>
+                                                Email Alerts for job recommendations twice every week
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pricing">
+                    <p>Get early access to Jobs. Choose your plan</p>
+                    <div class="flex">
+                        <div class="form">
+                            <input type="radio" name="" id="">
+                            <label for="">
+                                <span class="span1">3 Months</span>
+                                <h4>₹1,044*</h4>
+                                <p><a href="">₹1,492*</a> 30% OFF</p>
+                                <span class="span2">₹11.6/day</span>
+                            </label>
+                        </div>
+                        <div class="form">
+                            <input type="radio" name="" id="">
+                            <label for="">
+                                <span class="span1">3 Months</span>
+                                <h4>₹1,044*</h4>
+                                <p><a href="">₹1,492*</a> 30% OFF</p>
+                                <span class="span2">₹11.6/day</span>
+                            </label>
+                        </div>
+                    </div>
+                    <p class="span3">*Applicable taxes may apply.</p>
+                    <div class="btn-div">
+                        <button>BUY NOW</button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
+    </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div style="height: 30vh;"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 </body>
+
 </html>
