git section added in mail page

--- a/mail.html
+++ b/mail.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://kit.fontawesome.com/1ab25377f9.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="mail.css">
 </head>
@@ -16,6 +17,7 @@
     <div class="banner">
         <p>2.70L Got new jobs using this service*</p>
     </div>
+
     <div class="nav">
         <div class="upper">
             <div class="title">
@@ -116,6 +118,144 @@
             </div>
         </div>
     </div>
+    </div>
+
+    <div class="section1">
+        <div>
+            <h4>How our customers are getting benefitted?</h4>
+        </div>
+        <div class="div-flex">
+            <div class="circle">
+                <i class="fa-solid fa-arrow-trend-up"></i>
+                <h5>2,282</h5>
+                <p>Users working in/as Marketing and Communication have bought it</p>
+            </div>
+            <div class="circle">
+                <i class="fa-solid fa-arrow-trend-up"></i>
+                <h5>2.70L</h5>
+                <p>Got new jobs using this service*</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section2">
+        <h4>How Jobs4U service gives you an edge over other candidates on Naukri?</h4>
+        <div class="advantage-box">
+
+            <div class="flexx flexx2">
+                <h6>Benefit/Advantage</h6>
+                <h6>Free</h6>
+                <h6>Paid</h6>
+            </div>
+
+            <div class="flexx">
+                <p>Search and Apply to Jobs on Naukri</p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Receive jobs within 24 hours of being posted</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Early Applicant advantage</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Jobs handpicked by Naukri domain expert</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Expand job search to openings posted on company websites</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Receive criteria based relevant jobs on SMS - Max 3 per day</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Receive customized job alerts on mail</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Get active customer support</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+            <div class="flexx">
+                <p>Guaranteed Interview Call from Recruiters</p>
+                <p><i class="fa-regular fa-circle-xmark"></i></p>
+                <p><i class="fa-regular fa-circle-check"></i></p>
+            </div>
+
+
+
+        </div>
+    </div>
+
+    <div class="section3">
+        <div>
+            <h4>Why you may not be getting any calls from recruiters?</h4>
+            <p><span>1</span> are applying late for jobs, thus reducing your chances of getting a shortlist</p>
+            <p><span>2</span> The jobs that you are applying for, may not be relevant for your profile</p>
+            <p><span>3</span> You may be missing out on certain job openings that are exclusively advertised on Company
+                websites</p>
+        </div>
+        <div class="section3-img">
+            <img src="./assets/benefitsImg1.d456669e.png" alt="" class="img-fluid">
+        </div>
+    </div>
+
+    <div class="section4">
+        <h3>How Jobs4U service helps you in your job hunt?</h3>
+        <div class="section4-div">
+            <div class="section4-img">
+                <img src="./assets/benefitsImg2.13ebeb49.png" alt="" class="img-fluid">
+            </div>
+            <div>
+                <div class="flex1">
+                    <div>
+                        <i class="fa-solid fa-circle-check right"></i>
+                    </div>
+                    <div>
+                        <h6>Be among the first 20% job applicants</h6>
+                        <p>You will be notified within 24 hours of a new job being posted</p>
+                    </div>
+                </div>
+                <div class="flex1">
+                    <div>
+                        <i class="fa-solid fa-circle-check right"></i>
+                    </div>
+                    <div>
+                        <h6>Be among the first 20% job applicants</h6>
+                        <p>You will be notified within 24 hours of a new job being posted</p>
+                    </div>
+                </div>
+                <div class="flex1">
+                    <div>
+                        <i class="fa-solid fa-circle-check right"></i>
+                    </div>
+                    <div>
+                        <h6>Be among the first 20% job applicants</h6>
+                        <p>You will be notified within 24 hours of a new job being posted</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
