last section added

--- a/mail.html
+++ b/mail.html
@@ -258,6 +258,99 @@
         </div>
     </div>
 
+    <div class="section5">
+        <h3>How Does Jobs4U service works?</h3>
+        <div class="section5-div">
+            <div class="section5-innerdiv">
+                <div class="section5-img">
+                    <img src="./assets/jobs4uHowitworks1.3c47ed95.png" alt="">
+                </div>
+                <div>
+                    Discussion with Naukri experts to set up your personalized job alert criteria
+                </div>
+            </div>
+            <div class="section5-innerdiv">
+                <div class="section5-img">
+                    <img src="./assets/paHowitworks2.76b29f47.png" alt="">
+                </div>
+                <div>
+                    Discussion with Naukri experts to set up your personalized job alert criteria
+                </div>
+            </div>
+            <div class="section5-innerdiv">
+                <div class="section5-img">
+                    <img src="./assets/paHowitworks3.85f783be.png" alt="">
+                </div>
+                <div>
+                    Discussion with Naukri experts to set up your personalized job alert criteria
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section6">
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    How Frequently will I receive the Job alerts
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    You will receive Job Recommendations on Mail every Tuesday and Friday. Each Mail will contain Max 15 Job openings. Additionally, you will receive Job recommendations on SMS daily with Max 3 SMS per day
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    When will my Jobs4U service be activated?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    The service will be processed within 4 working days after we receive your updated resume. In case we do not receive your within 7 days, we will use your last updated resume on Naukri for processing your service
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    How many times will I get Naukri Expert call?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    You will receive 1 call from Naukri Expert within 4 working days after you purchase Jobs4U service
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="section7">
+        <h4>People who bought this also bought</h4>
+        <div class="section7-div">
+            <div class="section7-innerdiv">
+                <h6>Visual Resume</h6>
+                <p>Use Visuals to enhance and highlight your experience</p>
+                <span>Get our experts to write your Resume.</span>
+                <span>Over 95% satisfaction rate of Resumes created by Naukri Experts.</span>
+
+                <p class="last-para"><a href="">KNOW MORE</a> <i class="fa-solid fa-chevron-right"></i></p>
+            </div>
+            <div class="section7-innerdiv">
+                <h6>Visual Resume</h6>
+                <p>Use Visuals to enhance and highlight your experience</p>
+                <span>Get our experts to write your Resume.</span>
+                <span>Over 95% satisfaction rate of Resumes created by Naukri Experts.</span>
+
+                <p class="last-para"><a href="">KNOW MORE</a> <i class="fa-solid fa-chevron-right"></i></p>
+            </div>
+        </div>
+    </div>
+
 
     <div style="height: 30vh;"></div>
 
