new combo page added

--- a/combo-pack.html
+++ b/combo-pack.html
@@ -15,6 +15,7 @@
     </div>
 
     <div class="resume">
+        <h2 style="text-align: center;">Value Packs for Job Seeker</h2>
         <div class="resumes-container">
             <div class="resume-container">
                 <div class="resume-card" onclick="window.location.href='./mail.html'">
@@ -97,7 +98,7 @@
 
                 <div class="resume-card" onclick="window.location.href='./mail.html'">
                     <div class="heading">
-                        <h4>Job Search Value Pack</h4>
+                        <h4>Profile Highlighter</h4>
                     </div>
                     
                     <div class="points">
@@ -175,7 +176,7 @@
 
                 <div class="resume-card" onclick="window.location.href='./mail.html'">
                     <div class="heading">
-                        <h4>Job Search Value Pack</h4>
+                        <h4>Featured Pack</h4>
                     </div>
                     
                     <div class="points">
