--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
     
                 </div>
-                <div class="card card2" onclick="window.location.href='./combo-pack.html'">
+                <div class="card card2" onclick="window.location.href='./new-combo.html'">
                     <div class="card-img">
                         <img src="./assets/priorityApp.4d581f13.png" alt="" class="img-fluid">
                         <div class="tag">
@@ -73,7 +73,7 @@
                     </div>
     
                 </div>
-                <div class="card card1" onclick="window.location.href='./combo-pack.html'">
+                <div class="card card1" onclick="window.location.href='./new-combo.html'">
                     <div class="card-img">
                         <img src="./assets/resumeDisplay.c7a649c3.png" alt="" class="img-fluid">
                         <div class="tag">
@@ -172,6 +172,42 @@
 
     <div class="jobs">
         <div class="jobs-container">
+            <div class="job-card">
+                <div class="job-imgDiv">
+                    <img src="./assets/subscriptionWidget.d8278767.png" alt="" class="img-fluid">
+                </div>
+                <div class="job-desc">
+                    <h4>Subscribe to our Monthly Job Search Plan</h4>
+                    <p><i class="fas fa-check"></i> Rank higher in Recruiter Searches</p>
+                    <p><i class="fas fa-check"></i> Priority Access to Jobs</p>
+                    <p><i class="fas fa-check"></i> Send message to Recruiter anytime</p>
+                </div>
+                <div class="job-price">
+                    <p>Starts from</p>
+                    <h6>₹ 211 per month only</h6>
+
+                    <a href="">KNOW MORE</a>
+                </div>
+            </div>
+
+            <div class="job-card">
+                <div class="job-imgDiv">
+                    <img src="./assets/subscriptionWidget.d8278767.png" alt="" class="img-fluid">
+                </div>
+                <div class="job-desc">
+                    <h4>Subscribe to our Monthly Job Search Plan</h4>
+                    <p><i class="fas fa-check"></i> Rank higher in Recruiter Searches</p>
+                    <p><i class="fas fa-check"></i> Priority Access to Jobs</p>
+                    <p><i class="fas fa-check"></i> Send message to Recruiter anytime</p>
+                </div>
+                <div class="job-price">
+                    <p>Starts from</p>
+                    <h6>₹ 211 per month only</h6>
+
+                    <a href="">KNOW MORE</a>
+                </div>
+            </div>
+
             <div class="job-card">
                 <div class="job-imgDiv">
                     <img src="./assets/subscriptionWidget.d8278767.png" alt="" class="img-fluid">
